---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/dict.rs
description: "Rejects duplicate #dict keys"
expression: "{\"#dict\": {}, \"#dict\": {}}"
---
[31m[parser::object::duplicate-key] Error:[0m Duplicate key in object
   ╭─[ <unknown>:1:15 ]
   │
 1 │ {"#dict": {}, "#dict": {}}
   │  ───┬───      ───┬───  
   │     │            ╰───── Duplicate key
   │     │                  
   │     ╰────────────────── First occurrence of `#dict`
   │ 
   │ Help: J-Expr does not allow duplicate keys in the same object. Each key must be unique.
───╯
